modal overflow bug fixed

--- a/src/blocks/header/main_header.scss
+++ b/src/blocks/header/main_header.scss
@@ -53,6 +53,7 @@
   }
 
   &__cart {
+    cursor: pointer;
     display: flex;
     align-items: center;
     margin-left: 26px;
