--- a/src/blocks/modal/modal.scss
+++ b/src/blocks/modal/modal.scss
@@ -10,6 +10,7 @@
   position: fixed;
   align-items: center;
   z-index: 999999;
+  // height: 100vh;
   top: 0;
   right: 0;
   bottom: 0;
@@ -101,7 +102,7 @@
 
   &__backdrop {
     position: fixed;
-    z-index: ($z-index-modal - 1);
+    z-index: 99;
     top: 0;
     right: 0;
     bottom: 0;
